# authios-sdk

./: Cargo.toml
src/: client.rs  lib.rs  main.rs
src/errors/: mod.rs
src/errors/group_sdk/: create.rs  delete.rs  grant_permission.rs  mod.rs  new.rs  revoke_permission.rs
src/errors/permission_sdk/: create.rs  delete.rs  mod.rs  new.rs
src/errors/sdk/: create.rs  mod.rs  new.rs
src/errors/user_sdk/: authorize.rs  create.rs  get_info.rs  grant_group.rs  list_permissions.rs  login.rs  mod.rs  new.rs  register.rs  revoke_group.rs  update_pwd.rs
src/models/: group.rs  mod.rs  permission.rs  user.rs  user_resource_permission.rs  user_resource_permission_page.rs
src/params/: mod.rs
src/params/group_sdk/: create.rs  delete.rs  grant_permission.rs  mod.rs  revoke_permission.rs
src/params/permission_sdk/: create.rs  delete.rs  mod.rs
src/params/user_sdk/: authorize.rs  get_info.rs  grant_group.rs  list_permissions.rs  login.rs  mod.rs  register.rs  revoke_group.rs  update_pwd.rs
src/query/: mod.rs
src/query/permission/: mod.rs  resource.rs  service.rs
src/query/user/: all.rs  mod.rs  root.rs
src/query/user/logged/: mod.rs
src/responses/: mod.rs
src/responses/user/: mod.rs
src/sdk/: mod.rs
src/sdk/group/: create.rs  delete.rs  grant_permission.rs  mod.rs  revoke_permission.rs
src/sdk/permission/: create.rs  delete.rs  mod.rs
src/sdk/user/: authorize.rs  get_info.rs  grant_group.rs  list_permissions.rs  login.rs  mod.rs  register.rs  revoke_group.rs  update_pwd.rs
src/user/: authorize.rs  info.rs  login.rs  mod.rs  update_pwd.rs
(+61 files in other folders)
