[package]
name = "authios-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["rustls-tls", "json"], default-features = false }
thiserror = "2.0.12"
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1.46.1", features = ["full"] }
serde_json = "1.0.143"
